# Falcon2023

./: .gitattributes  .gitignore  CMakeLists.txt  Document.md  README.md  TODO.md
Client/: CMakeLists.txt  Client.qrc  qtquickcontrols2.conf  zh_CN.ts
Client/plugins/sim/: CMakeLists.txt  configwidget.cpp  configwidget.h  sslworld.cpp
Client/src/: communicator.cpp  field.cpp  field.h  interaction.cpp  main.cpp  networkinterfaces.cpp  rec_recorder.cpp  refereebox.cpp  remotesim.cpp  simmodule.cpp  simulator.cpp  simulator.h
Client/src/comm/: actionmodule.cpp  actionmodule.h  actionmodule_nan.cpp  communicator.cpp  communicator.h  debugger.cpp  debugger.h  optionobject.cpp  optionobject.h  remotesim.cpp  remotesim.h  simmodule.cpp  simmodule.h  simulator.cpp  simulator.h
Client/src/interface/: interaction.cpp  interaction.h  interaction4field.cpp  interaction4field.h  main.cpp  networkinterfaces.cpp  networkinterfaces.h  paraminterface.cpp  paraminterface.h  scriptsinterfaces.cpp  scriptsinterfaces.h  viewerinterface.h
Client/src/log/rec_log/: rec_eventlabel.cpp  rec_eventlabel.h  rec_player.cpp  rec_player.h  rec_recorder.cpp  rec_recorder.h  rec_slider.cpp  rec_slider.h
Client/src/log/worldcup/: log_slider.cpp  logeventlabel.cpp  logeventlabel.h  player.cpp  player.h
Client/src/other/: display.cpp  display.h  field.cpp  field.h  game.cpp  game.h  test.cpp  test.h
Client/src/qml/: ControlBoard.qml  ControlBoardKD.qml  RefereeBox.qml  RefereeBoxKD.qml  Settings.qml  ToolKitKD.qml  Viewer.qml  ViewerKD.qml  main.qml  mainKD.qml
Client/src/qml/Components/: ZGroupBox.qml  ZRobot.qml  qmldir
Client/src/qml/ComponentsKD/: DockWidget.qml
Client/src/qml/Gamepad/: DPad.qml  LeftThumbstick.qml  RightThumbstick.qml  qmldir
Client/src/qml/KDDockWidgets/: ControlBoardKD.qml  RefereeBoxKD.qml  RemoteControl.qml  Scripts.qml  SettingsKD.qml  ToolKitKD.qml  ViewerKD.qml  mainKD.qml
Client/src/qml/Widgets/: ControlBoard.qml  RefereeBox.qml  Viewer.qml  main.qml
Client/src/referee/: refereebox.cpp  refereebox.h  refereethread.cpp  refereethread.h
Client/src/utils/: globaldata.cpp  globaldata.h  globalsettings.cpp  globalsettings.h  messageformat.h  parammanager.h  staticparams.h  translator.hpp
Client/src/vision/: ballrecords.h  ballstate.h  chipsolver.cpp  collisiondetect.cpp  collisiondetect.h  dealball.cpp  dealball.h  dealrobot.cpp  dealrobot.h  kalmanfilter.cpp  kalmanfilter.h  maintain.cpp  maintain.h  visionmodule.cpp  visionmodule.h
Core/: CMakeLists.txt  Core.aps  Core.rc  Medusa.pro
Core/src/: SSLStrategy.cpp
Core/src/LuaModule/: LuaModule.cpp  LuaModule.h  README.md  defendutils.pkg  defpos2013.pkg  dribblestatus.pkg  kickstatus.pkg  lua_zeus.cpp
Core/src/LuaModule/pkg/: bestalg.pkg  bestplayer.pkg  defenceinfo.pkg  defenceinfonew.pkg  defendutils.pkg  defpos2015.pkg  gamestate.pkg  gdebugengine.pkg  geometry.pkg  global.pkg  guardpos.pkg  indirectdefender.pkg  kickdirection.pkg  kickstatus.pkg  matrix.pkg  munkres.pkg  normalplayutils.pkg  robotsensor.pkg  sidepos.pkg  supportpos.pkg  supportpos2022.pkg  tandemPos.pkg  utils.pkg  visionmodule.pkg  worlddefine.pkg  worldmodel.pkg  zeus.pkg
Core/src/ssl/: ActionModule.cpp  ActionModule.h  BallSpeedModel.cpp  BallSpeedModel.h  BallStatus.cpp  BallStatus.h  BestPlayer.cpp  BestPlayer.h  BufferCounter.h  ClassFactory.h  CommandFactory.h  Compensate.cpp  Compensate.h  CtrlBreakHandler.cpp  DecisionModule.cpp  DefendUtils.cpp  DefendUtils.h  GDebugEngine.cpp  GDebugEngine.h  Global.cpp  Global.h  KickDirection.cpp  KickDirection.h  NormalPlayUtils.cpp  OptionModule.cpp  ParamManagerNew.h  PassRangeList.cpp  PenaltyPosCleaner.h  RobotSensor.cpp  RobotSensor.h  ShootRangeList.h  TaskMediator.h  cudatest.cu  game_state.h  gpuBestAlgThread.cpp  gpuBestAlgThread.h  matrix2d.h  misc_types.h  os_param.h  param.h  (+3 more)
Core/src/ssl/MotionControl/: CMmotion.cpp  CMmotion.h  ControlModel.cpp  ControlModel.h  DynamicsSafetySearch.cpp  DynamicsSafetySearch.h  vector.h
Core/src/ssl/PathPlan/: BSplineCurver.cpp  BSplineCurver.h  BezierCurveNew.cpp  BezierCurveNew.h  BezierMotion.cpp  BezierMotion.h  KDTreeNew.h  ObstacleNew.cpp  PathPlanner.cpp  PathPlanner.h  PredictTrajectory.cpp  RRTPathPlanner.cpp  RRTPathPlanner.h  RRTPathPlannerNew.cpp  RRTPathPlannerNew.h
Core/src/ssl/PointCalculation/: AssistPoint.h  AtomPos.cpp  ChipBallJudge.cpp  ChipBallJudge.h  CornerAreaPos.cpp  CornerAreaPos.h  DefPos1G2D.cpp  DefPos1G2D.h  DefPos2013.cpp  DefPos2013.h  DefPos2015.cpp  DefPos2015.h  DefaultPos.h  DefendDribble.cpp  DefendDribble.h  GoaliePosV1.h  GuardPos.cpp  GuardPos.h  IndirectDefender.h  KickOffDefPosV2.h  MarkingPosV2.cpp  MarkingPosV2.h  MarkingTouchPos.cpp  MarkingTouchPos.h  MiddleAreaPos.cpp  SidePos.cpp  SidePos.h  SupportPos.cpp  SupportPos.h  SupportPos2022.h  TandemPos.cpp  TandemPos.h  TouchKickPos.h  WaitKickPos.h
Core/src/ssl/Vision/: BallPredictor.cpp  BallPredictor.h  DataReceiver4rbk.cpp  DataReceiver4rbk.h  RobotPredictor.cpp  RobotPredictor.h  VisionModule.cpp  VisionModule.h
Core/src/ssl/WorldModel/: DribbleStatus.h  GetLuaData.h  KickStatus.h  RobotCapability.cpp  RobotCapability.h  WorldDefine.h  WorldModel.h  WorldModel_lua.cpp
Core/src/ssl/bayes/: BayesReader.cpp  BayesReader.h  MatchState.cpp  MatchState.h
Core/src/ssl/cmu/: constants.h  obstacle.cpp  obstacle.h  path_planner.cpp  path_planner.h  vector.h
Core/src/ssl/cornell/: Trajectory.cpp
Core/src/ssl/defence/: DefenceInfo.cpp  DefenceInfo.h  EnemyDefendTacticAnalys.cpp  EnemyDefendTacticAnalys.h  EnemyDefendTacticArea.cpp  EnemySituation.cpp  EnemySituation.h  OppAttributesFactory.cpp  OppAttributesFactory.h  OppRoleFactory.cpp  OppRoleFactory.h  OppRoleMatcher.cpp  OppRoleMatcher.h
Core/src/ssl/defenceNew/: AttributeNew.h  AttributeSetNew.h  DefenceInfoNew.cpp  (+5 more)
grSim/: CMakeLists.txt
grSim/include/: configwidget.h  mainwindow.h  sslworld.h
grSim/include/physics/: pobject.h
grSim/src/: configwidget.cpp  glwidget.cpp  graphics.cpp  main.cpp  mainwindow.cpp  robot.cpp  sslworld.cpp
grSim/src/physics/: pworld.cpp
(+514 files in other folders)
